- Added an quick selection export menu (ie. GUI) to avoid Command Palette PlantUML export format pollution - Added support for PlantUML preview for selected text within any text document. This is handy for developers who want to preview UML embedded in code comments. - Added edit buffer settlement delay before preview refresh - Added toggle pause live preview command - Added template support with common UML artifacts - Added binaries to ensure that PDF and other features work out of box

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,11 @@
 .vscode/**
 typings/**
 out/test/**
+images/previews/**
 test/**
+java/**
 src/**
 **/*.map
-**/*.vsix
 .gitignore
 tsconfig.json
 vsc-extension-quickstart.md
