--- a/package.json
+++ b/package.json
@@ -1,89 +1,109 @@
 {
     "name": "plant-uml-ext",
-    "displayName": "Plant UML Extension",
-    "description": "Supports preview and export for all supported formats",
-    "version": "0.0.1",
+    "displayName": "Amigo PlantUML Modeler",
+    "description": "Supports preview, export, templates, snippets & syntax highlighting of PlantUML",
+    "version": "0.1.0",
     "publisher": "self-technologies",
     "engines": {
         "vscode": "^1.0.0"
     },
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/ashinw/vscode-plantuml-ext"
-	},    
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ashinw/vscode-plantuml-ext"
+    },
     "categories": [
+        "Snippets",
         "Other"
     ],
     "activationEvents": [
         "onCommand:plantuml.preview",
-        "onCommand:plantuml.exportPNG",
-        "onCommand:plantuml.exportSVG",
-        "onCommand:plantuml.exportEPS",
-        "onCommand:plantuml.exportPDF",
-        "onCommand:plantuml.exportVDX",
-        "onCommand:plantuml.exportXMI",
-        "onCommand:plantuml.exportSCXML",
-        "onCommand:plantuml.exportHTML",
-        "onCommand:plantuml.exportTXT",
-        "onCommand:plantuml.exportUTXT",
-        "onCommand:plantuml.exportLATEX",
-        "onCommand:plantuml.exportLATEX_NOPREAMBLE"
+        "onCommand:plantuml.export",
+        "onCommand:plantuml.importTemplate",
+        "onCommand:plantuml.toggleLivePreview"
     ],
-    "main": "./out/src/extension",
+    "icon": "images/icon.png",
+    "main": "./out/src/au/com/self/ide/vscode/ext/plantuml/amigo-ext",
     "contributes": {
-        "commands": [{
-            "command": "plantuml.preview",
-            "title": "Preview Plant UML text from active editor"
-        },
-        {
-            "command": "plantuml.exportPNG",
-            "title": "Export Plant UML text from active editor as PNG file"
-        },
-        {
-            "command": "plantuml.exportSVG",
-            "title": "Export Plant UML text from active editor as SVG file"
-        },
-        {
-            "command": "plantuml.exportEPS",
-            "title": "Export Plant UML text from active editor as EPS file"
-        },
-        {
-            "command": "plantuml.exportPDF",
-            "title": "Export Plant UML text from active editor as PDF file"
-        },
-        {
-            "command": "plantuml.exportVDX",
-            "title": "Export Plant UML text from active editor as VDX file"
-        },
-        {
-            "command": "plantuml.exportXMI",
-            "title": "Export Plant UML text from active editor as XMI file"
-        },
-        {
-            "command": "plantuml.exportSCXML",
-            "title": "Export Plant UML text from active editor as SCXML file"
-        },
-        {
-            "command": "plantuml.exportHTML",
-            "title": "Export Plant UML text from active editor as HTML file"
-        },
-        {
-            "command": "plantuml.exportTXT",
-            "title": "Export Plant UML text from active editor as TXT file"
-        },
-        {
-            "command": "plantuml.exportUTXT",
-            "title": "Export Plant UML text from active editor as UTXT file"
-        },
-        {
-            "command": "plantuml.exportLATEX",
-            "title": "Export Plant UML text from active editor as LATEX file"
-        },
-        {
-            "command": "plantuml.exportLATEX_NOPREAMBLE",
-            "title": "Export Plant UML text from active editor as LATEX_NOPREAMBLE file"
-        }        
-        ]
+        "languages": [
+            {
+                "id": "plantuml",
+                "aliases": [
+                    "PlantUML"
+                ],
+                "extensions": [
+                    ".pu",
+                    ".plantuml",
+                    ".iuml",
+                    ".puml"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "snippets": [
+            {
+                "language": "plantuml",
+                "path": "./snippets/snippets.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "plantuml",
+                "scopeName": "source.plantuml",
+                "path": "./syntaxes/PlantUML.tmLanguage"
+            }
+        ],
+        "keybindings": [
+            {
+                "command": "plantuml.preview",
+                "key": "ctrl+p ctrl+v",
+                "mac": "cmd+p cmd+v",
+                "when": "editorTextFocus"
+            },
+            {
+                "command": "plantuml.toggleLivePreview",
+                "key": "ctrl+p ctrl+p",
+                "mac": "cmd+p cmd+p",
+                "when": "editorTextFocus"
+            }
+        ],
+        "commands": [
+            {
+                "command": "plantuml.preview",
+                "title": "Open PlantUML Preview",
+                "description": "Preview the current PlantUML artifact (ie. file or selection) in a side view panel"
+            },
+            {
+                "command": "plantuml.export",
+                "title": "Export PlantUML text ...",
+                "description": "Export the current PlantUML text file in a graphic representation (eg. PNG, SVG, etc)"
+            },
+            {
+                "command": "plantuml.importTemplate",
+                "title": "Import PlantUML template ...",
+                "description": "Import a PlantUML template as a basis for your model (eg. Activity, Class, Sequence, etc UML diagrams)"
+            },
+            {
+                "command": "plantuml.toggleLivePreview",
+                "title": "Toggle PlantUML Live Preview",
+                "description": "Turns on/off live previewing whilst editing such that the modeler is not distracted with syntax errors & repeated updates"
+            }
+        ],
+        "configuration": {
+            "type": "object",
+            "title": "PlantUML configuration",
+            "properties": {
+                "plantuml.editing.livepreview.delay": {
+                    "type": "number",
+                    "default": "500",
+                    "description": "The number of milliseconds to wait after the last text edit before the PlantUML live preview is triggered for update"
+                },
+                "plantuml.renderer.JAVA_HOME": {
+                    "type": "string",
+                    "default": "auto",
+                    "description": "PlantUML requires Java to the run the PlantUML binaries. If you leave this variable value as 'auto' then the JAVA_HOME OS environmental variable will be used"
+                }
+            }
+        }
     },
     "scripts": {
         "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
